--- a/A_dbms/templates/dbms/agree/agree/agree-filter.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-filter.html
@@ -22,6 +22,10 @@
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
+    <label class="btn btn-primary btn-sm">
+        在保余额：{{ balance }}
+    </label>
+
     {% if form_agree_add %}
         <label class="pull-right">
             <a class="btn btn-success btn-sm" id="addAgree">添加合同</a>
