--- a/A_dbms/templates/dbms/provide/agree/provide-agree-filter.html
+++ b/A_dbms/templates/dbms/provide/agree/provide-agree-filter.html
@@ -22,4 +22,8 @@
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
+    <label class="btn btn-primary btn-sm">
+        在保余额：{{ balance }}
+    </label>
+
 </div>
