--- a/A_dbms/templates/dbms/review/review/review-filter.html
+++ b/A_dbms/templates/dbms/review/review/review-filter.html
@@ -31,6 +31,11 @@
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
+
+    <label class="btn btn-danger btn-sm">
+        在保余额：{{ balance }}，流贷：{{ flow_amount }}，承兑：{{ accept_amount }}，保函：{{ back_amount }}
+    </label>
+
 </div>
 
 
