--- a/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal/appraisal-table.html
@@ -10,6 +10,7 @@
             <th>项目助理</th>
             <th>风控专员</th>
             <th>上会日期</th>
+            <th>签批日期</th>
             <th>纪要编号</th>
             <th>项目状态</th>
         </tr>
@@ -28,7 +29,8 @@
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
-                <td>{{ article.review_date }}</td>
+                <td>{{ article.review_date|default_if_none:""  }}</td>
+                <td>{{ article.sign_date|default_if_none:"" }}</td>
                 <td>{{ article.summary_num }}</td>
                 <td>{{ article.get_article_state_display }}</td>
             </tr>
