--- a/A_dbms/templates/dbms/provide/provide/provide-filter.html
+++ b/A_dbms/templates/dbms/provide/provide/provide-filter.html
@@ -24,5 +24,7 @@
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
-
+    <label class="btn btn-primary btn-sm">
+        在保余额：{{ balance }}
+    </label>
 </div>
