--- a/A_dbms/templates/dbms/index_dbms.html
+++ b/A_dbms/templates/dbms/index_dbms.html
@@ -13,7 +13,21 @@
             </div>
             <div class="col-sm-10 col-sm-offset-3 col-md-10 col-md-offset-2 main" style="padding: 1px;">{#右侧主体框架}#}
                 {% block right-content-container %}{#右侧内容}#}
-                    <h2 class="page-header">{{ request.user.name }}的个人首页</h2>
+                    <h2 class="page-header">{{ request.user.name }}，以下是需要你尽快处理的事项</h2>
+                    {% if no_feedback_count > 0 %}
+                        <h3>待反馈项目数：<a href="{% url 'dbms:article' article_state=1 %}">{{ no_feedback_count }}</a>
+                        </h3>
+                    {% endif %}
+                    {% if no_ascertain_count > 0 %}
+                        <h3>未落实风控条件项目数：
+                            <a href="{% url 'dbms:provide_agree' agree_state=31 %}">{{ no_ascertain_count }}</a>
+                        </h3>
+                    {% endif %}
+                    {% if no_pigeonhole_count > 0 %}
+                        <h3>未归档项目数：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>
+                    {% endif %}
+                    {#                    <h3>待保后项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>#}
+                    {#                    <h3>逾期项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>#}
                 {% endblock %}
             </div>
         </div>
