--- a/A_dbms/templates/dbms/article/article/article-filter.html
+++ b/A_dbms/templates/dbms/article/article/article-filter.html
@@ -24,7 +24,7 @@
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
-    <label class="btn btn-primary btn-sm">
+    <label>
         在保余额：{{ balance }}
     </label>
     <label class="pull-right">
