--- a/A_dbms/templates/dbms/review/review/review-filter.html
+++ b/A_dbms/templates/dbms/review/review/review-filter.html
@@ -32,7 +32,7 @@
         </form>
     </label>
 
-    <label class="btn btn-danger btn-sm">
+    <label>
         在保余额：{{ balance }}，流贷：{{ flow_amount }}，承兑：{{ accept_amount }}，保函：{{ back_amount }}
     </label>
 
