--- a/A_dbms/templates/dbms/agree/agree/agree-table.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-table.html
@@ -9,9 +9,11 @@
             <th>期限</th>
             <th>合同金额</th>
             <th>放款限额</th>
-            <th>加权通知金额</th>
-            <th>放款金额</th>
-            <th>还款金额</th>
+            {% if PAGE_TITLE == '风控落实' %}
+                <th>加权通知金额</th>
+                <th>放款金额</th>
+                <th>还款金额</th>
+            {% endif %}
             <th>纪要编号</th>
             <th>合同状态</th>
         </tr>
@@ -30,9 +32,11 @@
                 <td>{{ agree.agree_term }}</td>
                 <td align="right">{{ agree.agree_amount }}</td>
                 <td align="right">{{ agree.amount_limit }}</td>
-                <td align="right">{{ agree.agree_notify_sum }}</td>
-                <td align="right">{{ agree.agree_provide_sum }}</td>
-                <td align="right">{{ agree.agree_repayment_sum }}</td>
+                {% if PAGE_TITLE == '风控落实' %}
+                    <td align="right">{{ agree.agree_notify_sum }}</td>
+                    <td align="right">{{ agree.agree_provide_sum }}</td>
+                    <td align="right">{{ agree.agree_repayment_sum }}</td>
+                {% endif %}
                 <td>{{ agree.lending }}</td>
                 <td>{{ agree.get_agree_state_display }}</td>
             </tr>
