--- a/A_dbms/templates/dbms/provide/overdu/overdu-table.html
+++ b/A_dbms/templates/dbms/provide/overdu/overdu-table.html
@@ -12,7 +12,7 @@
             {% if PAGE_TITLE == '归档管理' %}
                 <th>归档状态</th>
                 <th>档案编号</th>
-            {% else %}
+            {% elif PAGE_TITLE == '放款管理' %}
                 <th>还款金额</th>
             {% endif %}
             <th>在保状态</th>
@@ -21,11 +21,11 @@
         <tbody>
         {% for provide in p_list %}
             <tr>
-                {% if PAGE_TITLE == '归档管理' %}
-                    <td><a href="{% url 'dbms:pigeonhole_scan' provide_id=provide.id %}">
-                        {{ provide.notify.agree.agree_num }} </a></td>
-                {% else %}
+                {% if PAGE_TITLE == '放款管理' %}
                     <td><a href="{% url 'dbms:provide_scan' provide_id=provide.id %}">
+                        {{ provide.notify.agree.agree_num }} </a></td>
+                {% elif PAGE_TITLE == '归档管理' %}
+                    <td><a href="{% url 'dbms:pigeonhole_scan' provide_id=provide.id %}">
                         {{ provide.notify.agree.agree_num }} </a></td>
                 {% endif %}
                 {#                <td>{{ provide.notify.agree.lending.summary.custom.short_name }}</td>#}
@@ -38,7 +38,7 @@
                 {% if PAGE_TITLE == '归档管理' %}
                     <td>{{ provide.get_implement_display }}</td>
                     <td>{{ provide.file_num|default_if_none:"" }}</td>
-                {% else %}
+                {% elif PAGE_TITLE == '放款管理' %}
                     <td align="right">{{ provide.provide_repayment_sum }}</td>
                 {% endif %}
                 <td>{{ provide.get_provide_status_display }}</td>
