--- a/templates/index.html
+++ b/templates/index.html
@@ -66,10 +66,12 @@
                     menus_list：{{ request.session.menus }}<br>
                     authoritis_list：{{ request.session.authoritis }}<br>
                     cartes_list：{{ request.session.cartes }}<br><br>
+                    job_list：{{ request.session.jobs }}<br><br>
 
                     menus_session：{{ menus_session }}<br>
                     authoritis_session：{{ authoritis_session }}<br>
                     cartes_session：{{ cartes_session }}<br>
+                    job_session：{{ job_session }}<br>
 
 
 
