--- a/A_dbms/templates/dbms/article/article/article-table.html
+++ b/A_dbms/templates/dbms/article/article/article-table.html
@@ -9,7 +9,7 @@
             <th>项目经理</th>
             <th>项目助理</th>
             <th>风控专员</th>
-            <th>创建日期</th>
+            <th>提交日期</th>
             <th>反馈日期</th>
             <th>加权通知金额</th>
             <th>放款金额</th>
