--- a/A_dbms/templates/dbms/custom/custom-scan.html
+++ b/A_dbms/templates/dbms/custom/custom-scan.html
@@ -9,6 +9,7 @@
         {% include 'dbms/custom/modl/custom-del-mod.html' %}
         {% include 'dbms/custom/modl/custom-edit-mod.html' %}
         {% include 'dbms/custom/modl/shareholder-add-mod.html' %}
+        {% include 'dbms/custom/modl/custom-article-add-mod.html' %}
     </div>
 {% endblock %}
 
@@ -16,5 +17,6 @@
     {% include 'dbms/custom/extra/js-custom-del.html' %}
     {% include 'dbms/custom/extra/js-custom-edit.html' %}
     {% include 'dbms/custom/extra/js-shareholder-add.html' %}
+    {% include 'dbms/article/extra/js-article-add.html' %}
 
 {% endblock %}
