--- a/A_dbms/templates/dbms/custom/scan/tab/project_status.html
+++ b/A_dbms/templates/dbms/custom/scan/tab/project_status.html
@@ -25,7 +25,7 @@
                 <td>{{ article.director.name }}</td>
                 <td>{{ article.assistant.name }}</td>
                 <td>{{ article.control.name }}</td>
-                <td>{{ article.article_date }}</td>
+                <td>{{ article.build_date }}</td>
                 <td>{{ article.article_provide_sum }}</td>
                 <td>{{ article.article_repayment_sum }}</td>
                 <td>{{ article.get_article_state_display }}</td>
