--- a/A_dbms/templates/dbms/index_dbms.html
+++ b/A_dbms/templates/dbms/index_dbms.html
@@ -6,6 +6,7 @@
         <div class="row">{#主体框架}#}
             <div class="col-sm-2 col-md-2 sidebar">{#左侧菜单}#}
                 <ul class="nav nav-sidebar">
+                    <li><a href={% url 'dbms:index' %}>我的主页</a></li>
                     {% for mm in request.session.menus %}
                         <li><a href={% url mm.url_name %}>{{ mm.name }}</a></li>
                     {% endfor %}
@@ -14,28 +15,32 @@
             <div class="col-sm-10 col-sm-offset-3 col-md-10 col-md-offset-2 main" style="padding: 1px;">{#右侧主体框架}#}
                 {% block right-content-container %}{#右侧内容}#}
                     <h2 class="page-header">跟踪事项：</h2>
-                    {% if no_feedback_count > 0 %}
-                        <h3>待反馈项目：<a href="{% url 'dbms:article' article_state=1 %}">{{ no_feedback_count }}</a>
-                        </h3>
-                    {% endif %}
-                    {% if no_ascertain_count > 0 %}
-                        <h3>未落实风控条件项目：
-                            <a href="{% url 'dbms:provide_agree' agree_state=31 %}">{{ no_ascertain_count }}</a>
-                        </h3>
-                    {% endif %}
-                    {% if no_pigeonhole_count > 0 %}
-                        <h3>未归档项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>
-                    {% endif %}
+                    {#                    {% if no_feedback_count > 0 %}#}
+                    <h3>待反馈项目：<a href="{% url 'dbms:article' article_state=1 %}">{{ no_feedback_count }}</a>
+                    </h3>
+                    {#                    {% endif %}#}
+                    {#                    {% if no_ascertain_count > 0 %}#}
+                    <h3>未落实风控条件项目：
+                        <a href="{% url 'dbms:provide_agree' agree_state=31 %}">{{ no_ascertain_count }}</a>
+                    </h3>
+                    {#                    {% endif %}#}
+                    {#                    {% if no_pigeonhole_count > 0 %}#}
+                    <h3>未归档项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>
+                    {#                    {% endif %}#}
                     {#                    <h3>待保后项目：<a href="{% url 'dbms:pigeonhole' implement=1 %}">{{ no_pigeonhole_count }}</a></h3>#}
-                    {% if overdue_count > 0 %}
-                        <h3>逾期项目：<a href="{% url 'dbms:overdue' %}">{{ overdue_count }}</a></h3>
-                    {% endif %}
-                    {% if soondue_count > 0 %}
-                        <h3>30天内到期项目：<a href="{% url 'dbms:soondue' %}">{{ soondue_count }}</a></h3>
-                    {% endif %}
-                    {% if soondue_draft_count > 0 %}
-                        <h3>30天内到期票据：<a href="{% url 'dbms:soondue_draft' %}">{{ soondue_draft_count }}</a></h3>
-                    {% endif %}
+                    {#                    {% if overdue_count > 0 %}#}
+                    <h3>逾期项目：<a href="{% url 'dbms:overdue' %}">{{ overdue_count }}</a></h3>
+                    {#                    {% endif %}#}
+                    {#                    {% if soondue_count > 0 %}#}
+                    <h3>30天内到期项目：<a href="{% url 'dbms:soondue' %}">{{ soondue_count }}</a></h3>
+                    {#                    {% endif %}#}
+
+                    {#                    {% if overdue_draft_count > 0 %}#}
+                    <h3>逾期票据：<a href="{% url 'dbms:soondue_draft' %}">{{ overdue_draft_count }}</a></h3>
+                    {#                    {% endif %}#}
+                    {#                    {% if soondue_draft_count > 0 %}#}
+                    <h3>30天内到期票据：<a href="{% url 'dbms:soondue_draft' %}">{{ soondue_draft_count }}</a></h3>
+                    {#                    {% endif %}#}
 
                 {% endblock %}
             </div>
