--- a/A_dbms/templates/dbms/external/cooperative/cooperative-table.html
+++ b/A_dbms/templates/dbms/external/cooperative/cooperative-table.html
@@ -14,7 +14,7 @@
         </tr>
         </thead>
         <tbody>
-        {% for cooperator in cooperator_p_list %}
+        {% for cooperator in p_list %}
             <tr>
                 <td>{{ forloop.counter }}</td>
                 <td>{{ cooperator.name }}</td>
