--- a/A_dbms/templates/dbms/index_dbms.html
+++ b/A_dbms/templates/dbms/index_dbms.html
@@ -36,12 +36,18 @@
                     {#                    {% endif %}#}
 
                     {#                    {% if overdue_draft_count > 0 %}#}
-                    <h3>逾期票据：<a href="{% url 'dbms:soondue_draft' %}">{{ overdue_draft_count }}</a></h3>
+                    <h3>逾期票据：<a href="{% url 'dbms:overdue_draft' %}">{{ overdue_draft_count }}</a></h3>
                     {#                    {% endif %}#}
                     {#                    {% if soondue_draft_count > 0 %}#}
                     <h3>30天内到期票据：<a href="{% url 'dbms:soondue_draft' %}">{{ soondue_draft_count }}</a></h3>
                     {#                    {% endif %}#}
-
+                    {#                    {% if overdue_draft_count > 0 %}#}
+                    <h3>逾期协议：<a href="{% url 'dbms:overdue_cooperator' %}">{{ overdue_cooperator_count }}</a></h3>
+                    {#                    {% endif %}#}
+                    {#                    {% if soondue_draft_count > 0 %}#}
+                    <h3>30天内到期协议：
+                        <a href="{% url 'dbms:soondue_cooperator' %}">{{ soondue_cooperator_count }}</a></h3>
+                    {#                    {% endif %}#}
                 {% endblock %}
             </div>
         </div>
