--- a/A_dbms/templates/dbms/pigeonhole/pigeonhole_scan/pigeonhole-tab.html
+++ b/A_dbms/templates/dbms/pigeonhole/pigeonhole_scan/pigeonhole-tab.html
@@ -1,7 +1,7 @@
 <div>
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
-        <li role="presentation">
+        <li role="presentation" class="active">
             <a href="#pigeonhole" style="background-color: #f5f5f5" aria-controls="home" role="tab"
                data-toggle="tab">归档 </a></li>
         <li role="presentation">
