--- a/A_dbms/templates/dbms/dun/dun_scan/dun-tab.html
+++ b/A_dbms/templates/dbms/dun/dun_scan/dun-tab.html
@@ -30,7 +30,7 @@
                aria-controls="settings" role="tab" data-toggle="tab">追偿流程</a></li>
         <li role="presentation" class="active">
             <a href="#standing" style="background-color: #f5f5f5"
-               aria-controls="messages" role="tab" data-toggle="tab">跟进台账</a></li>
+               aria-controls="messages" role="tab" data-toggle="tab">追偿台账</a></li>
 
     </ul>
     <!-- Tab panes -->
@@ -51,7 +51,7 @@
             {% include 'dbms/dun/dun_scan/tab/clue.html' %} </div>
         <div role="tabpanel" class="tab-pane" id="stage"> <!--追偿流程-->
             {% include 'dbms/dun/dun_scan/tab/stage.html' %} </div>
-        <div role="tabpanel" class="tab-pane active" id="standing"> <!--跟进台账-->
+        <div role="tabpanel" class="tab-pane active" id="standing"> <!--追偿台账-->
             {% include 'dbms/dun/dun_scan/tab/standing.html' %} </div>
 
     </div>
