--- a/A_dbms/templates/dbms/dun/dun-scan.html
+++ b/A_dbms/templates/dbms/dun/dun-scan.html
@@ -7,11 +7,14 @@
     <div class="container-fluid" style="padding-left: 1px;">
         {% include 'dbms/dun/dun_scan/dun-summry.html' %}
         {% include 'dbms/dun/dun_scan/dun-tab.html' %}
+        {% include 'dbms/dun/modl/dun-warrant-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-warrant-del-mod.html' %}
+
     </div>
 {% endblock %}
 
 {% block extra-js %}
-
-
+    {% include 'dbms/dun/extra/js-dun-warrant-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-warrant-del.html' %}
 
 {% endblock %}
