--- a/A_dbms/templates/dbms/dun/dun_scan/dun-summry.html
+++ b/A_dbms/templates/dbms/dun/dun_scan/dun-summry.html
@@ -2,12 +2,12 @@
     <div class="panel-heading">
         <label>追偿情况</label>
         <label class="navbar-right">
-            <a class="btn btn-primary btn-sm " id="addCounterB">财产线索</a>
-            <a class="btn btn-primary btn-sm " id="signAgreeB">委托代理</a>
+            <a class="btn btn-primary btn-sm " id="delStandingB">追偿台账</a>
+            <a class="btn btn-primary btn-sm " id="addClueB">财产线索</a>
+            <a class="btn btn-primary btn-sm " id="addAgentgentB">委托代理</a>
             <a class="btn btn-primary btn-sm " id="editAgreeB">法律文书</a>
-            <a class="btn btn-primary btn-sm " id="delAgreeB">追偿台账</a>
-            <a class="btn btn-primary btn-sm " id="delAgreeB">追偿费用</a>
-            <a class="btn btn-primary btn-sm " id="delAgreeB">回收款项</a>
+            <a class="btn btn-primary btn-sm " id="delChargeB">追偿费用</a>
+            <a class="btn btn-primary btn-sm " id="delRetrieveB">案款回收</a>
         </label>
     </div>
 
