--- a/A_dbms/templates/dbms/dun/dun-scan.html
+++ b/A_dbms/templates/dbms/dun/dun-scan.html
@@ -9,6 +9,11 @@
         {% include 'dbms/dun/dun_scan/dun-tab.html' %}
         {% include 'dbms/dun/modl/dun-warrant-add-mod.html' %}
         {% include 'dbms/dun/modl/dun-warrant-del-mod.html' %}
+        {% include 'dbms/dun/modl/dun-sealup-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-standing-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-standing-del-mod.html' %}
+        {% include 'dbms/dun/modl/dun-charge-add-mod.html' %}
+        {% include 'dbms/dun/modl/dun-charge-del-mod.html' %}
 
     </div>
 {% endblock %}
@@ -16,5 +21,10 @@
 {% block extra-js %}
     {% include 'dbms/dun/extra/js-dun-warrant-add.html' %}
     {% include 'dbms/dun/extra/js-dun-warrant-del.html' %}
+    {% include 'dbms/dun/extra/js-dun-sealup-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-standing-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-standing-del.html' %}
+    {% include 'dbms/dun/extra/js-dun-charge-add.html' %}
+    {% include 'dbms/dun/extra/js-dun-charge-del.html' %}
 
 {% endblock %}
