--- a/A_dbms/templates/dbms/dun/dun-seal.html
+++ b/A_dbms/templates/dbms/dun/dun-seal.html
@@ -4,8 +4,8 @@
 
 
 {% block right-content-container %}
-    {% include 'dbms/dun/dun/dun-filter.html' %}
-    {% include 'dbms/dun/dun/dun-table.html' %}
+    {% include 'dbms/dun/seal/seal-filter.html' %}
+    {% include 'dbms/dun/seal/seal-table.html' %}
 {% endblock %}
 
 {% block extra-js %}
