--- a/A_dbms/templates/dbms/dun/compensatory.html
+++ b/A_dbms/templates/dbms/dun/compensatory.html
@@ -1,6 +1,6 @@
 {% extends 'dbms/index_dbms.html' %}
 
-{% block title %}代偿列表{% endblock %}
+{% block title %}{{ PAGE_TITLE }}{% endblock %}
 
 
 {% block right-content-container %}
