--- a/A_dbms/templates/dbms/dun/dun_scan/dun-summry-body.html
+++ b/A_dbms/templates/dbms/dun/dun_scan/dun-summry-body.html
@@ -3,6 +3,8 @@
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     追偿本金：{{ dun_obj.dun_amount }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-    回收金额：{{ dun_obj.recovered_amount }}</label>
+    追偿费用：{{ dun_obj.dun_charge_sun }}</label>
+<label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+    回收金额：{{ dun_obj.dun_retrieve_sun }}</label>
 <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
     状态：{{ dun_obj.get_dun_stage_display }}</label>
