--- a/A_dbms/templates/dbms/dun/extra/js-dun-standing-add.html
+++ b/A_dbms/templates/dbms/dun/extra/js-dun-standing-add.html
@@ -1,44 +1,44 @@
 <script>
     $(function () {
-        bindAddMeeting();
-        bindAddMeetingModalOk();
+        bindAddStandingB();
+        bindAddStandingModalOk();
 
     });
 
-    function bindAddMeeting() {
-        $('#addMeeting').click(function () {
-            console.log("bindAddMeeting")
-            $('#addMeetingModal').modal('show');
+    function bindAddStandingB() {
+        $('#addStandingB').click(function () {
+            console.log("bindAddClueB")
+            $('#addStandingModal').modal('show');
         })
     }
 
-    function bindAddMeetingModalOk() {
-        $('#addMeetingModalOk').click(function () {
+    function bindAddStandingModalOk() {
+        $('#addStandingModalOk').click(function () {
             var postData = {};
 
-            $('#addMeetingModal').find('input,select').each(function () {
+            $('#addStandingModal').find('input,select').each(function () {
                 var v = $(this).val();
                 var n = $(this).attr('name');
                 postData[n] = v;
             });
+            var standingDetail = $('#id_standing_detail').val();
+            postData['standing_detail'] = standingDetail;
             var postDataStr = JSON.stringify(postData);
-            console.log(postDataStr)
+            console.log(postDataStr);
             $.ajax({
-                url: '/dbms/meeting/add/',
+                url: '/dbms/dun/standing/add/',
                 type: 'POST',
                 data: {'postDataStr': postDataStr},
                 success: function (arg) {
                     var dict = JSON.parse(arg);
                     console.log(dict);
                     if (dict.status) {
-                        $('#addMeetingModal').modal('hide');
+                        $('#addStandingModal').modal('hide');
                         alert(dict.message);
                         window.location.reload();
                     } else {
                         alert(dict.message);
-                        $('#e_review_model').text(dict.forme.review_model);
-                        $('#e_review_date').text(dict.forme.review_date);
-                        $('#e_article').text(dict.forme.article);
+                        $('#e_standing_detail').text(dict.forme.standing_detail);
                     }
                 }
             })
