--- a/A_dbms/templates/dbms/dun/modl/dun-charge-add-mod.html
+++ b/A_dbms/templates/dbms/dun/modl/dun-charge-add-mod.html
@@ -1,23 +1,23 @@
-<div class="modal fade" id="allotExpertModal" tabindex="-1"
-     role="dialog" aria-labelledby="allotExpertModal">
+<div class="modal fade" id="addChargeModal" tabindex="-1"
+     role="dialog" aria-labelledby="addChargeModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="allotExpertModalLabel">分配评委：{{ article_obj.article_num }}
-                    <input style="display: none" name="article_id" value="{{ article_obj.id }}">
+                <h4 class="modal-title" id="addChargeModalLabel">财产线索：{{ dun_obj.title }}
+                    <input style="display: none" name="dun_id" value="{{ dun_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
-                    {% include 'dbms/meeting/modl/mod_form/expert-allot.html' %}
+                    {% include 'dbms/dun/modl/mod_form/dun-charge-add.html' %}
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="allotExpertModalOk">分配</button>
+                <button type="button" class="btn btn-primary" id="addChargeModalOk">添加</button>
             </div>
         </div>
     </div>
