--- a/A_dbms/templates/dbms/dun/modl/dun-sealup-add-mod.html
+++ b/A_dbms/templates/dbms/dun/modl/dun-sealup-add-mod.html
@@ -1,23 +1,23 @@
-<div class="modal fade" id="editMeetingModal" tabindex="-1"
-     role="dialog" aria-labelledby="editMeetingModal">
+<div class="modal fade" id="addSealUpModal" tabindex="-1"
+     role="dialog" aria-labelledby="addSealUpModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="editMeetingModalLabel">变更评审会
-                    <input style="display: none" name="meeting_id" value="{{ meeting_obj.id }}">
-                </h4>
+                <h4 class="modal-title" id="addSealUpModalLabel"></h4>
+                <input style="display: none" name="dun_id" value="{{ dun_obj.id }}">
+                <input style="display: none" name="warrant_id" id="addSealUpId">
             </div>
             <div class="modal-body">
                 <form class="form-horizontal">
-                    {% include 'dbms/meeting/modl/mod_form/meeting-edit.html' %}
+                    {% include 'dbms/dun/modl/mod_form/dun-sealup-add.html' %}
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="editMeetingModalOk">添加</button>
+                <button type="button" class="btn btn-primary" id="addSealUpModalOk">添加</button>
             </div>
         </div>
     </div>
