--- a/A_dbms/templates/dbms/dun/modl/dun-standing-add-mod.html
+++ b/A_dbms/templates/dbms/dun/modl/dun-standing-add-mod.html
@@ -1,23 +1,23 @@
-<div class="modal fade" id="addMeetingModal" tabindex="-1"
-     role="dialog" aria-labelledby="addMeetingModal">
+<div class="modal fade" id="addStandingModal" tabindex="-1"
+     role="dialog" aria-labelledby="addStandingModal">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addMeetingModalLabel">添加评审会</h4>
+                <h4 class="modal-title" id="addStandingModalLabel">添加追偿信息：{{ dun_obj.title }}
+                    <input style="display: none" name="dun_id" value="{{ dun_obj.id }}">
+                </h4>
             </div>
             <div class="modal-body">
-
                 <form class="form-horizontal">
-                    {% include 'dbms/meeting/modl/mod_form/meeting-add.html' %}
+                    {% include 'dbms/dun/modl/mod_form/dun-standing-add.html' %}
                 </form>
-
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" id="addMeetingModalOk">添加</button>
+                <button type="button" class="btn btn-primary" id="addStandingModalOk">添加</button>
             </div>
         </div>
     </div>
