--- a/A_dbms/templates/dbms/dun/modl/dun-warrant-add-mod.html
+++ b/A_dbms/templates/dbms/dun/modl/dun-warrant-add-mod.html
@@ -6,7 +6,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title" id="addClueModalLabel">添加财产线索
+                <h4 class="modal-title" id="addClueModalLabel">财产线索：{{ dun_obj.title }}
                     <input style="display: none" name="dun_id" value="{{ dun_obj.id }}">
                 </h4>
             </div>
